# streamdeck-obs-plugin2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSES.md  OBSTemplate.cmake  OldCMake.cmake  README.md
ci/: linux_multiarch.sh  linux_x86-64.sh  macos_arm64.sh  macos_multiarch.sh  macos_x86-64.sh  windows_multiarch.bat  windows_x86-32.bat  windows_x86-64.bat
cmake/: ObsPluginHelpers.cmake  util.cmake
cmake/clang/: Clang.cmake  README.md
cmake/codesign/: CodeSign.cmake  LICENSE  README.md
cmake/modules/: Architecture.cmake
data/locale/: en-US.ini
docs/: obs.frontend.md  obs.scene.md  obs.source.md  rpc-definition.md
installer/mac/: OBS.pkgproj  chkOSVer.sh
obs-scripts/scripts/: .Brewfile.lock.json  Build-Windows.ps1  build-macos.zsh
source/: details-popup.cpp  details-popup.hpp  json-rpc.cpp  json-rpc.hpp  module.cpp  module.hpp  server.cpp  server.hpp  windll.cpp
source/handlers/: handler-obs-frontend.cpp  handler-obs-frontend.hpp  handler-obs-scene.cpp  handler-obs-scene.hpp  handler-obs-source.cpp  handler-obs-source.hpp  handler-system.cpp  handler-system.hpp
source/loader/: module.cpp
templates/: config.hpp.in  installer-signed.iss.in  installer.iss.in  module.cpp.in  version.hpp.in  version.rc.in
ui/: popup.qrc  popup.ui
